css/layout/main.css
#breadcrumb {
    padding-top: 32px;
    margin-top: 40px;
}

#breadcrumb li {
    display: inline-block;
    font-family: var(--main-font);
}

#breadcrumb li:not(:last-child):after {
    content: '>>';
    font-size: 0.6rem;
    padding: 0.4rem;
}

main section {
    padding: 1.2rem;
    text-align: center;
    font-family: var(--main-font);
}

.section__initial header {
    display: flex;
    flex-direction: column;
}

.section__initial header p {
    max-width: 800px;
    margin: auto;
}

.section__initial .img-wrapper-xl {
    order: -1;
}

.section__initial--squares,
.section--brands,
.section--solutions,
.distrib__container,
.section--inspo,
.section--blog {
    max-width: 1024px;
    padding: 2%;
    margin: auto;
    text-align: center;
}

.contact-form {
    max-width: 1024px;
    margin: auto;
    padding: 2%;
}

.section--profcontact {
    background-color: var(--color-lightgreen);
    text-align: center;
}

.section--contact,
.section--distrib,
.section--solutions {
    background-color: var(--color-lightgray);
}

.section--distrib {
    margin-top: 1rem;
}

.solutions__form,
.solutions__picture {
    display: inline-block;
    vertical-align: top;
    padding: 1.2em;
}

.solutions__form {
    max-width: 450px;
}

@media (min-width: 1920px) {
    .section__initial--squares,
    .section--brands,
    .section--solutions,
    .distrib__container,
    .section--inspo,
    .section--blog {
        max-width: 1440px;
    }
}

